k8s/apps/epilink/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: epilink
  labels:
    app: epilink
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: epilink
  template:
    metadata:
      labels:
        app: epilink
    spec:
      containers:
        - name: epilink
          image: litarvan/epilink:0.7.0-beta4
          imagePullPolicy: IfNotPresent
          command:
            - bin/epilink-backend
          args:
            - data/epilink.yml
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: epilink
              mountPath: /var/run/epilink/data
          resources:
            requests:
              cpu: 400m
              memory: 1Gi
            limits:
              memory: 1Gi
      volumes:
        - name: epilink
          persistentVolumeClaim:
            claimName: epilink
