k8s/apps/epilink/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: epilink
spec:
  type: ClusterIP
  selector:
    app: epilink
  ports:
    - port: 80
      name: http
      targetPort: 8080
