k8s/apps/epilink/ingress-route.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: epilink
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`epilink.litarvan.com`)
      services:
        - name: epilink
          port: http
