k8s/apps/epilink/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: epilink
spec:
  rules:
    - host: epilink.litarvan.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: epilink
                port:
                  name: http
  tls:
    - hosts:
        - epilink.litarvan.dev
      secretName: epilink-tls
